added more elements to the idea containers and more customizations to tailwind config

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "postcss-import": "^12.0.1",
         "prettier": "2.0.5",
         "tailwindcss": "^2.0.2"
+    },
+    "dependencies": {
+        "@tailwindcss/line-clamp": "^0.2.0"
     }
 }
